--- a/hNext/hNext.Model/hNext.Model.csproj
+++ b/hNext/hNext.Model/hNext.Model.csproj
@@ -6,11 +6,18 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
+    <PackageReference Include="Microsoft.OData.Client" Version="7.5.4" />
+    <PackageReference Include="Microsoft.OData.Core" Version="7.5.4" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.5.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\hNext.Infrastructure\hNext.Infrastructure.csproj" />
     <ProjectReference Include="..\hNext.Resources\hNext.Resources.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
   </ItemGroup>
 
 </Project>
