patient search form view

--- a/hNext/hNext.WebClient/appsettings.json
+++ b/hNext/hNext.WebClient/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
+  "ConnectionsStrings": {
+    "hNextDbConnectionString": "Server=DESKTOP-9KKNLIV;Database=hNextDb;Integrated Security=True"
+  },
+  "AllowedHosts": "*"
 }
