added vue object to patient search

--- a/hNext/hNext.WebClient/appsettings.json
+++ b/hNext/hNext.WebClient/appsettings.json
@@ -7,5 +7,8 @@
   "ConnectionsStrings": {
     "hNextDbConnectionString": "Server=DESKTOP-9KKNLIV;Database=hNextDb;Integrated Security=True"
   },
+  "AppSettings": {
+    "ApiServer": "http://localhost:60433/api/"
+  },
   "AllowedHosts": "*"
 }
