address database filler

--- a/hNext/hNext.DataService/appsettings.json
+++ b/hNext/hNext.DataService/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionsStrings": {
-    "hNextDbConnectionString": "Server=DESKTOP-9KKNLIV;Database=hNextDb;Integrated Security=True"
+    "hNextDbConnectionString": "Server=DESKTOP-FD6IG6K;Database=hNextDb;Integrated Security=True"
   },
   "AllowedHosts": "*"
 }
