--- a/hNext/hNext.DbAccessMSSQLCore/hNext.DbAccessMSSQLCore.csproj
+++ b/hNext/hNext.DbAccessMSSQLCore/hNext.DbAccessMSSQLCore.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20190709182822_Diagnosys.cs" />
+    <Compile Remove="Migrations\20190709182822_Diagnosys.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.4" />
