--- a/hNext/hNext.Model/hNext.Model.csproj
+++ b/hNext/hNext.Model/hNext.Model.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -6,8 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
-    <PackageReference Include="Microsoft.OData.Client" Version="7.5.4" />
-    <PackageReference Include="Microsoft.OData.Core" Version="7.5.4" />
+    <PackageReference Include="Microsoft.OData.Client" Version="7.6.0" />
+    <PackageReference Include="Microsoft.OData.Core" Version="7.6.0" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.5.0" />
   </ItemGroup>
 
