corrections for vscode on linux

--- a/hNext/hNext.DataService/appsettings.json
+++ b/hNext/hNext.DataService/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionsStrings": {
-    "hNextDbConnectionString": "Server=DESKTOP-FD6IG6K;Database=hNextDb;Integrated Security=True;connection timeout=180"
+    "hNextDbConnectionString": "Server=localhost;Database=hNextDb;User Id=SA;Password=Vjqgfhjkm1"
   },
   "AllowedHosts": "*"
 }
