--- a/hNext/hNext.WebClient/appsettings.json
+++ b/hNext/hNext.WebClient/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "ConnectionsStrings": {
-    "hNextDbConnectionString": "Server=DESKTOP-FD6IG6K;Database=hNextDb;Integrated Security=True"
+    "hNextDbConnectionString": "Server=localhost;Database=hNextDb;User Id=SA;Password=Vjqgfhjkm1"
   },
   "AppSettings": {
     "ApiServer": "http://localhost:60433/api/"
