corrections to csproj

--- a/hNext/hNext.DbAccessMSSQLCore/hNext.DbAccessMSSQLCore.csproj
+++ b/hNext/hNext.DbAccessMSSQLCore/hNext.DbAccessMSSQLCore.csproj
@@ -4,10 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
-  <ItemGroup>
+  <!-- <ItemGroup>
     <Compile Remove="Migrations\20190709182822_Diagnosys.cs" />
     <Compile Remove="Migrations\20190709182822_Diagnosys.Designer.cs" />
-  </ItemGroup>
+  </ItemGroup> -->
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
