drug table filler and prescriptions started

--- a/hNext/hNext.DataService/appsettings.json
+++ b/hNext/hNext.DataService/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionsStrings": {
-    "hNextDbConnectionString": "Server=localhost;Database=hNextDb;User Id=SA;Password=Vjqgfhjkm1"
+    "hNextDbConnectionString": "Server=localhost;Database=hNextDb;User Id=SA;Password=Vjqgfhjkm1",
+    "remoteDbConnectionString":"Server=46.149.84.230;Database=hNextDb;User Id=eoneoff;Password=Vjqgfhjkm1"
   },
   "AllowedHosts": "*"
 }
