--- a/hNext/hNext.WebClient/appsettings.json
+++ b/hNext/hNext.WebClient/appsettings.json
@@ -5,7 +5,8 @@
     }
   },
   "ConnectionsStrings": {
-    "hNextDbConnectionString": "Server=localhost;Database=hNextDb;User Id=SA;Password=Vjqgfhjkm1"
+    "hNextDbConnectionString": "Server=localhost;Database=hNextDb;User Id=SA;Password=Vjqgfhjkm1",
+    "remoteDbConnectionString":"Server=46.149.84.230;Database=hNextDb;User Id=eoneoff;Password=Vjqgfhjkm1"
   },
   "AppSettings": {
     "ApiServer": "http://localhost:60433/api/"
