--- a/hNext/hNext.WebClientBlazor/hNext.WebClientBlazor.csproj
+++ b/hNext/hNext.WebClientBlazor/hNext.WebClientBlazor.csproj
@@ -31,4 +31,11 @@
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\favicon.ico">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
