--- a/hNext/hNext.WebApiRepository/hNext.WebApiRepository.csproj
+++ b/hNext/hNext.WebApiRepository/hNext.WebApiRepository.csproj
@@ -1,6 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\hNext.Model\hNext.Model.csproj" />
     <ProjectReference Include="..\hNext.IRepository\hNext.IRepository.csproj" />
   </ItemGroup>
