--- a/hNext/hNext.WebClientBlazor/hNext.WebClientBlazor.csproj
+++ b/hNext/hNext.WebClientBlazor/hNext.WebClientBlazor.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -25,6 +25,7 @@
     <ProjectReference Include="..\hNext.IRepository\hNext.IRepository.csproj" />
     <ProjectReference Include="..\hNext.Model\hNext.Model.csproj" />
     <ProjectReference Include="..\hNext.ResourceLibrary\hNext.ResourceLibrary.csproj" />
+    <ProjectReference Include="..\hNext.WebApiRepository\hNext.WebApiRepository.csproj" />
   </ItemGroup>
 
   <ItemGroup>
